--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9084,3 +9084,15 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
     width: calc(100% - 16px); }
     .mdl-grid--no-spacing > .mdl-cell--12-col-desktop.mdl-cell--12-col-desktop {
       width: 100%; } }
+
+.mdl-layout .layout-transparent {
+  background: url('../img/header-01.jpg') #93552b center/cover; }
+  .mdl-layout .layout-transparent .mdl-layout__header, .mdl-layout .layout-transparent .mdl-layout__drawer-button {
+    color: white; }
+  .mdl-layout .layout-transparent .mdl-layout__content {
+    height: 100px; }
+
+.container {
+  max-width: 1600px;
+  width: calc(100% - 16px);
+  margin: 0 auto; }
