--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9086,11 +9086,11 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
       width: 100%; } }
 
 .mdl-layout .layout-transparent {
-  background: url('../img/header-01.jpg') #93552b center/cover; }
+  background: url('../img/header-04.jpg') #6a625d center/cover; }
   .mdl-layout .layout-transparent .mdl-layout__header, .mdl-layout .layout-transparent .mdl-layout__drawer-button {
     color: white; }
   .mdl-layout .layout-transparent .mdl-layout__content {
-    height: 100px; }
+    height: 220px; }
 
 .container {
   max-width: 1600px;
