--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -3,7 +3,7 @@
 .mdl-layout {
   .layout-transparent {
     //background: #333 !important;
-    background: url('../img/header-04.jpg') /*#93552b*/ #907d67 center / cover;
+    background: url('../img/header-06.jpg') #22688b center / cover;
     .mdl-layout__header,
     .mdl-layout__drawer-button {
       color: white;
