--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9086,7 +9086,7 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
       width: 100%; } }
 
 .mdl-layout .layout-transparent {
-  background: url('../img/header-04.jpg') #907d67 center/cover; }
+  background: url('../img/header-06.jpg') #22688b center/cover; }
   .mdl-layout .layout-transparent .mdl-layout__header, .mdl-layout .layout-transparent .mdl-layout__drawer-button {
     color: white; }
   .mdl-layout .layout-transparent .mdl-layout__content {
