--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -88,8 +88,8 @@ $trim-color-classes: false !default;
 
 // Use color primarily for emphasis. Choose colors that fit with
 // your brand and provide good contrast between visual components.
-$color-primary: $palette-blue-grey-600 !default;
-$color-primary-dark: $palette-blue-grey-700 !default;
+$color-primary: $palette-light-blue-500 !default;
+$color-primary-dark: $palette-light-blue-800 !default;
 $color-accent: $palette-orange-A200 !default;
 
 // Our primary is dark, so use $color-dark-contrast for overlaid text.
