--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -6,6 +6,6 @@
 
 @import 'layout/body';
 @import 'layout/header';
-//@import 'layout/content';
+@import 'layout/content';
 //@import 'layout/sidebar';
 //@import 'layout/footer';
