--- a/public/css/sass/settings/_variables.scss
+++ b/public/css/sass/settings/_variables.scss
@@ -67,8 +67,8 @@ $performance_font: 'Helvetica', 'Arial', sans-serif !default;
 *
 **/
 
-@import "_color-definitions";
-@import "functions";
+@import "../../../../resources/components/material-design-lite/src/_color-definitions";
+@import "../../../../resources/components/material-design-lite/src/functions";
 
 /* ==========  Color & Themes  ========== */
 
