--- a/public/css/sass/settings/_variables.scss
+++ b/public/css/sass/settings/_variables.scss
@@ -82,9 +82,9 @@ $trim-color-classes: false !default;
 
 // Use color primarily for emphasis. Choose colors that fit with
 // your brand and provide good contrast between visual components.
-$color-primary: $palette-indigo-500 !default;
-$color-primary-dark: $palette-indigo-700 !default;
-$color-accent: $palette-pink-A200 !default;
+$color-primary: $palette-orange-500 !default;
+$color-primary-dark: $palette-orange-700 !default;
+$color-accent: $palette-light-green-500 !default;
 
 // Our primary is dark, so use $color-dark-contrast for overlaid text.
 $color-primary-contrast: $color-dark-contrast !default;
