--- a/public/css/sass/layout/_header.scss
+++ b/public/css/sass/layout/_header.scss
@@ -4,6 +4,31 @@
     color: white;
     text-decoration: none;
   }
+  .user-button {
+    height: 40px;
+    min-width: 40px;
+    width: 40px;
+    padding: 0;
+    border-radius: 50%;
+    overflow: hidden;
+    @include shadow-2dp();
+    .avatar-img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  .user-menu {
+    li {
+      a {
+        text-decoration: none;
+        color: $layout-text-color;
+      }
+    }
+  }
+  .admin-button {
+    margin-right: 15px;
+  }
+  
 }
 
 @media screen and (max-width: #{$layout-screen-size-threshold}) {
