--- a/public/css/sass/layout/_content.scss
+++ b/public/css/sass/layout/_content.scss
@@ -53,4 +53,12 @@
     right: 30px;
     z-index: 300;
   }
+
+  .avatar-profile-img {
+    width: 128px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+  }
 }
